# Piskvorky

./: CMakeLists.txt  ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj
Piskvorky01/: CMakeLists.txt  Piskvorky01.cpp  Piskvorky01.h  PiskvorkyFunkcie.cpp  PiskvorkyFunkcie.h
